# Sini

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
ext/: CMakeLists.txt
include/: sini.hpp
test/: sini.cpp
travis/: after_script.sh  before_script.sh  script.sh
